--- a/CharNotationDesigner/CharNotationDesigner.csproj
+++ b/CharNotationDesigner/CharNotationDesigner.csproj
@@ -46,18 +46,14 @@
   <ItemGroup>
     <Compile Include="Char.cs" />
     <Compile Include="CharEditor.cs" />
-    <Compile Include="CharNotationDataSet.cs">
-      <DependentUpon>CharNotationDataSet.xsd</DependentUpon>
-      <SubType>Component</SubType>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Compile>
     <Compile Include="CharNotationDataSet.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>CharNotationDataSet.xsd</DependentUpon>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Compile>
-    <Compile Include="DataTranslator.cs" />
+    <Compile Include="DataTranslator.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -81,17 +77,14 @@
     </Compile>
     <None Include="CharNotationDataSet.xsc">
       <DependentUpon>CharNotationDataSet.xsd</DependentUpon>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Include="CharNotationDataSet.xsd">
       <Generator>MSDataSetGenerator</Generator>
       <LastGenOutput>CharNotationDataSet.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Include="CharNotationDataSet.xss">
       <DependentUpon>CharNotationDataSet.xsd</DependentUpon>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
