--- a/CharNotationDesigner/App.config
+++ b/CharNotationDesigner/App.config
@@ -4,10 +4,7 @@
     </configSections>
     <connectionStrings>
         <add name="CharNotationDesigner.Properties.Settings.CharNotationDataConnectionString"
-            connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=D:\Documents\减字谱计划\CharNotationAddIn\Database\CharNotationData.mdf;Integrated Security=True;Connect Timeout=30"
+            connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\CharNotationData.mdf;Integrated Security=True;Connect Timeout=30"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
-    </startup>
 </configuration>
