项目重命名。添加一个预览减字的程序

--- a/CharDesigner/app.config
+++ b/CharDesigner/app.config
@@ -3,7 +3,7 @@
     <configSections>
     </configSections>
     <connectionStrings>
-        <add name="CharNotationDesigner.Properties.Settings.CharNotationDataConnectionString"
+        <add name="CharNotation.Properties.Settings.CharNotationDataConnectionString"
             connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\CharNotationData.mdf;Integrated Security=True;Connect Timeout=30"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
